--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "intervention/image": "*",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/socialite": "*",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "maatwebsite/excel": "*",
