--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "biscolab/laravel-recaptcha": "^6.1",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "*",
         "laravel/framework": "^10.0",
