--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "maatwebsite/excel": "*",
+        "maatwebsite/excel": "^3.1",
         "stevebauman/location": "*"
     },
     "require-dev": {
@@ -33,7 +33,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
