--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "biscolab/laravel-recaptcha": "^6.1",
+        "google/apiclient": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "*",
         "laravel/framework": "^10.0",
@@ -15,6 +16,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "maatwebsite/excel": "^3.1",
+        "smalot/pdfparser": "^2.11",
         "stevebauman/location": "*"
     },
     "require-dev": {
