--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "biscolab/laravel-recaptcha": "^6.1",
+        "davejamesmiller/laravel-breadcrumbs": "^5.3",
         "google/apiclient": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "*",
