--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,13 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+ # block files which needs to be hidden, specify .example extension of the file
+    <Files ~ "\.(env|json|config.js|md|gitignore|gitattributes|lock)$">
+    Order allow,deny
+    Deny from all
+    </Files>
+
+
     RewriteEngine On
 
     # Handle Authorization Header
