--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ yarn-error.log
 /public/tracker/resume/*
 /public/company_cover/*
 /public/company_logo/*
+/public/subuser_profile_image/*
+/public/jobseeker_profile_image/*
 /public/emp_profile_image/*
 /public/resume/*
 /public/blogs/*
