imap and data board apis

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/ui": "^4.5",
         "maatwebsite/excel": "^3.1",
         "smalot/pdfparser": "^2.11",
-        "stevebauman/location": "*"
+        "stevebauman/location": "*",
+        "webklex/laravel-imap": "^6.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "*",
